# Komodo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  constants.py  main.py  requirements.txt  transcription.py  utils.py  vcpkg.json
base/: __main__.py  buffer.py  constants.py  executor_agent.py  transcription.py  utils.py
basic/: __main__.py  buffer.py  constants.py  executor_agent.py  transcription.py
cmake/: vcpkg.cmake
docs/: architecture.md
libs/whisper/: README.md
scripts/: build.ps1  build_whisper.ps1  dev.ps1  run_komodo_capture.ps1
src/: audio.cpp  audio.h  main.cpp  transcriber.cpp  transcriber.h
